--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,3 +1,28 @@
 <html>
-
+    <head>
+        <title>Article One | Nithesh Raaj</title>
+    </head>
+    <body>
+        <div>
+            <a href="/">Home</a>
+        </div>
+        <hr/>
+        <h3>
+            Article One
+        </h3>
+        <div>
+            Sep 18, 2016
+        </div>
+        <div>
+            <p>
+                This is my content for the first article. This is my content for the first article. This is my content for the first article. This is my content for the first article. This is my content for the first article. This is my content for the first article. 
+            </p>
+            <p>
+                This is my content for the first article. This is my content for the first article. This is my content for the first article. This is my content for the first article. This is my content for the first article. This is my content for the first article. 
+            </p> 
+            <p>
+                This is my content for the first article. This is my content for the first article. This is my content for the first article. This is my content for the first article. This is my content for the first article. This is my content for the first article. 
+            </p>
+        </div>
+    </body>
 </html>
