--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,6 +1,9 @@
 <html>
     <head>
-        <title>Article One | Nithesh Raaj</title>
+        <title>
+            Article One | Nithesh Raaj
+        </title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <div>
