--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,28 +4,38 @@
             Article One | Nithesh Raaj
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <style>
+            .container {
+                max-width:800px;
+                margin: 0 auto;
+                color: grey;
+                font-family: sans-serif;
+            }
+        </style>
     </head>
     <body>
-        <div>
-            <a href="/">Home</a>
-        </div>
-        <hr/>
-        <h3>
-            Article One
-        </h3>
-        <div>
-            Sep 18, 2016
-        </div>
-        <div>
-            <p>
-                This is my content for the first article. This is my content for the first article. This is my content for the first article. This is my content for the first article. This is my content for the first article. This is my content for the first article. 
-            </p>
-            <p>
-                This is my content for the first article. This is my content for the first article. This is my content for the first article. This is my content for the first article. This is my content for the first article. This is my content for the first article. 
-            </p> 
-            <p>
-                This is my content for the first article. This is my content for the first article. This is my content for the first article. This is my content for the first article. This is my content for the first article. This is my content for the first article. 
-            </p>
+        <div class="container">
+            <div>
+                <a href="/">Home</a>
+            </div>
+            <hr/>
+            <h3>
+                Article One
+            </h3>
+            <div>
+                Sep 18, 2016
+            </div>
+            <div>
+                <p>
+                    This is my content for the first article. This is my content for the first article. This is my content for the first article. This is my content for the first article. This is my content for the first article. This is my content for the first article. 
+                </p>
+                <p>
+                    This is my content for the first article. This is my content for the first article. This is my content for the first article. This is my content for the first article. This is my content for the first article. This is my content for the first article. 
+                </p> 
+                <p>
+                    This is my content for the first article. This is my content for the first article. This is my content for the first article. This is my content for the first article. This is my content for the first article. This is my content for the first article. 
+                </p>
+            </div>
         </div>
     </body>
 </html>
