--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -4,22 +4,25 @@
             Article Two | Nithesh Raaj
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="/ui/style.css" rel="stylesheet"/>
     </head>
     <body>
-        <div>
-            <a href="/">Home</a>
-        </div>
-        <hr/>
-        <h3>
-            Article Two
-        </h3>
-        <div>
-            Sep 18, 2016
-        </div>
-        <div>
-            <p>
-                This is my content for the second article.
-            </p>
+        <div class="container">
+            <div>
+                <a href="/">Home</a>
+            </div>
+            <hr/>
+            <h3>
+                Article Two
+            </h3>
+            <div>
+                Sep 18, 2016
+            </div>
+            <div>
+                <p>
+                    This is my content for the second article.
+                </p>
+            </div>
         </div>
     </body>
 </html>
