--- a/ui/index.html
+++ b/ui/index.html
@@ -4,18 +4,15 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="center">
+        <div class="container">
             <img src="/ui/madi.png" class="img-medium"/>
+            <hr/>
+            
+            <div class="center text-big bold">
+                Hi! I am your webapp.
+                <h2>I have made some local changes</h2>
+            </div>
+            <script type="text/javascript" src="/ui/main.js">
         </div>
-        <br>
-        <div class="center text-big bold">
-            Hi! I am your webapp.
-            <h2>I have made some local changes</h2>
-        </div>
-        <script type="text/javascript" src="/ui/main.js">
-        </script>
-        <script>
-            alert("Hi");
-        </script>
     </body>
 </html>
