[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -12,7 +12,10 @@
                 Hi! I am your webapp.
                 <h2>I have made some local changes</h2>
             </div>
-            <script type="text/javascript" src="/ui/main.js">
+            <script type="text/javascript" src="/ui/main.js"></script>
+            <div class="footer">
+                
+            </div>
         </div>
     </body>
 </html>
