--- a/ui/index.html
+++ b/ui/index.html
@@ -13,8 +13,9 @@
                 <h2>I have made some local changes</h2>
             </div>
             <script type="text/javascript" src="/ui/main.js"></script>
+            <hr/>
             <div class="footer">
-                
+                This button <button id='counter'>Click Me</button> has been clicked <span id ="count">0</span> times.
             </div>
         </div>
     </body>
